--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,20 +1,17 @@
-$lightPurple: #ccccff;
-$lightPink:  #f2bfbf;
-$sand: #e6dada;
+$lightPurple: #CCCCFF;
+$lightPink:  #F2BFBF;
+$sand: #E6DADA;
 $darkPurple: #8080FF;
-
 .app {
   display: flex;
   justify-content: center;
   .container {
     width: 1024px;
-
     .link {
       text-decoration: none;
       color: inherit;
     }
     //LOGIN & REGISTER
- 
     .auth {
       display: flex;
       flex-direction: column;
@@ -22,13 +19,12 @@ $darkPurple: #8080FF;
       justify-content: center;
       height: 100vh;
       background-color: $lightPurple;
-
       h1 {
-        font-size: 20px;
-        color: teal;
+        font-size: 30px;
+        color: white;
         margin-bottom: 20px;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
       }
-
       form {
         display: flex;
         flex-direction: column;
@@ -36,36 +32,30 @@ $darkPurple: #8080FF;
         background-color: white;
         width: 200px;
         gap: 20px;
-
         input {
           padding: 10px;
           border: none;
           border-bottom: 1px solid gray;
         }
-
         button {
           padding: 10px;
           border: none;
-          background-color: teal;
+          background-color: #8080FF;
           cursor: pointer;
           color: white;
         }
-
         p {
           font-size: 12px;
           color: red;
           text-align: center;
         }
-
         span {
           font-size: 12px;
           text-align: center;
         }
       }
     }
-
     //NAVBAR
-
     .navbar {
       .container {
         padding: 10px 0px;
@@ -81,16 +71,13 @@ $darkPurple: #8080FF;
           display: flex;
           align-items: center;
           gap: 10px;
-
           h6 {
             font-size: 16px;
             font-weight: 300;
           }
-
           span {
             cursor: pointer;
           }
-
           .write {
             background-color: $lightPurple;
             width: 50px;
@@ -101,19 +88,16 @@ $darkPurple: #8080FF;
             justify-content: center;
             font-weight: 300;
             border: 1px solid white;
-
             &:hover {
-              color: teal;
+              color: #8080FF;
               background-color: white;
-              border: 1px solid teal;
+              border: 1px solid #8080FF;
             }
           }
         }
       }
     }
-
     //FOOTER
-
     footer {
       margin-top: 100px;
       padding: 20px;
@@ -126,28 +110,22 @@ $darkPurple: #8080FF;
         height: 50px;
       }
     }
-
     //HOME
-
     .home {
       .posts {
         margin-top: 50px;
         display: flex;
         flex-direction: column;
         gap: 150px;
-
         .post {
           display: flex;
           gap: 100px;
-
           &:nth-child(2n + 1) {
             flex-direction: row-reverse;
           }
-
           .img {
             flex: 2;
             position: relative;
-
             &::after {
               content: "";
               width: 100%;
@@ -158,28 +136,23 @@ $darkPurple: #8080FF;
               left: -20px;
               z-index: -1;
             }
-
             img {
               width: 100%;
               max-height: 400px;
               object-fit: cover;
             }
           }
-
           .content {
             flex: 3;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-
             h1 {
               font-size: 48px;
             }
-
             p {
               font-size: 18px;
             }
-
             button {
               width: max-content;
               padding: 10px 20px;
@@ -189,7 +162,6 @@ $darkPurple: #8080FF;
               background-color: white;
               border: 1px solid $darkPurple;
               color: $darkPurple;
-
               &:hover {
                 border: 1px solid white;
                 background-color: $lightPurple;
@@ -200,25 +172,20 @@ $darkPurple: #8080FF;
         }
       }
     }
-
     //SINGLE
-
     .single {
       display: flex;
       gap: 50px;
-
       .content {
         flex: 5;
         display: flex;
         flex-direction: column;
         gap: 30px;
-
         img {
           width: 100%;
           height: 300px;
           object-fit: cover;
         }
-
         .user {
           display: flex;
           align-items: center;
@@ -230,28 +197,23 @@ $darkPurple: #8080FF;
             border-radius: 50%;
             object-fit: cover;
           }
-
           span {
             font-weight: bold;
           }
         }
-
         .edit {
           display: flex;
           gap: 5px;
-
           img {
             width: 20px;
             height: 20px;
             cursor: pointer;
           }
         }
-
         h1 {
           font-size: 42px;
           color: #333;
         }
-
         p {
           text-align: justify;
           line-height: 30px;
@@ -262,36 +224,30 @@ $darkPurple: #8080FF;
         display: flex;
         flex-direction: column;
         gap: 25px;
-
         h1 {
           font-size: 20px;
           color: #555;
         }
-
         .post {
           display: flex;
           flex-direction: column;
           gap: 10px;
-
           img {
             width: 100%;
             height: 200px;
             object-fit: cover;
           }
-
           h2 {
             color: #555;
           }
-
           button {
             width: max-content;
             padding: 7.5px 15px;
             border: none;
             cursor: pointer;
-            color: teal;
+            color: #8080FF;
             background-color: white;
-            border: 1px solid teal;
-
+            border: 1px solid #8080FF;
             &:hover {
               border: 1px solid white;
               background-color: $lightPurple;
@@ -301,43 +257,35 @@ $darkPurple: #8080FF;
         }
       }
     }
-
     //WRITE
-
     .add {
       margin-top: 20px;
       display: flex;
       gap: 20px;
-
       .content {
         flex: 5;
         display: flex;
         flex-direction: column;
         gap: 20px;
-
         input {
           padding: 10px;
           border: 1px solid lightgray;
         }
-
         .editorContainer {
           height: 300px;
           overflow: scroll;
           border: 1px solid lightgray;
-
           .editor {
             height: 100%;
             border: none;
           }
         }
       }
-
       .menu {
         flex: 2;
         display: flex;
         flex-direction: column;
         gap: 20px;
-
         .item {
           border: 1px solid lightgray;
           padding: 10px;
@@ -347,41 +295,36 @@ $darkPurple: #8080FF;
           justify-content: space-between;
           font-size: 12px;
           color: #555;
-
           h1{
             font-size: 20px;
           }
-
           .file{
             text-decoration: underline;
             cursor: pointer;
           }
-
           .buttons{
             display: flex;
             justify-content: space-between;
-
             :first-child{
               cursor: pointer;
-              color: teal;
+              color: #8080FF;
               background-color: white;
-              border: 1px solid teal;
+              border: 1px solid #8080FF;
               padding: 3px 5px;
             }
             :last-child{
               cursor: pointer;
               color: white;
-              background-color: teal;
-              border: 1px solid teal;
+              background-color: #8080FF;
+              border: 1px solid #8080FF;
               padding: 3px 5px;
             }
           }
-
           .cat{
             display: flex;
             align-items: center;
             gap: 2px;
-            color: teal;
+            color: #8080FF;
           }
         }
       }
