--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -320,6 +320,13 @@ button:hover {
               border: 1px solid #8080FF;
             }
           }
+          .topImg {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          object-fit: cover;
+          cursor: pointer;
+          }
         }
       }
     }
