--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -230,9 +230,10 @@ $darkPurple: #8080FF;
   color: white;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
 }
-
+//Publishbutton Write
 button:hover {
-  background-color: #0056b3;
+  background-color: $lightPurple;
+  color: black
 }
 
     //LOGIN & REGISTER
@@ -264,7 +265,7 @@ button:hover {
         button {
           padding: 10px;
           border: none;
-          background-color: #8080FF;
+          background-color: $darkPurple;
           cursor: pointer;
           color: white;
         }
@@ -519,8 +520,110 @@ button:hover {
       }
     }
     
+    //SINGLEPOST
+    .singlePost {
+      flex: 9;
+    }
+    
+    .singlePostWrapper {
+      padding: 20px;
+      padding-right: 0;
+      display: flex;
+      flex-direction: column;
+    }
+    
+    .singlePostImg {
+      width: 100%;
+      height: 300px;
+      border-radius: 5px;
+      object-fit: cover;
+    }
+    
+    .singlePostTitle {
+      text-align: center;
+      margin: 10px;
+      font-family: "Lora", serif;
+      font-size: 28px;
+    }
+    
+    .singlePostTitleInput {
+      margin: 10px;
+      font-family: "Lora", serif;
+      font-size: 28px;
+      text-align: center;
+      border: none;
+      color: gray;
+      border-bottom: 1px solid lightgray;
+    }
+    
+    .singlePostTitleInput:focus {
+      outline: none;
+    }
+    
+    .singlePostEdit {
+      float: right;
+      font-size: 16px;
+    }
+    
+    .singlePostIcon {
+      margin-left: 10px;
+      cursor: pointer;
+    }
+    
+    .singlePostIcon:first-child {
+      color: $darkPurple;
+    }
+    
+    .singlePostIcon:last-child {
+      color: $darkPurple;
+    }
+    
+    .singlePostInfo {
+      margin-bottom: 20px;
+      display: flex;
+      justify-content: space-between;
+      font-size: 16px;
+      //font-family: "Varela Round", sans-serif;
+      color: black;
+    }
+    
+    .singlePostDesc {
+      color: black;
+      font-size: 18px;
+      line-height: 25px;
+    }
+    
+    .singlePostDesc::first-letter {
+      margin-left: 20px;
+      //font-size: 30px;
+      font-weight: 600;
+    }
+    
+    .singlePostDescInput {
+      border: none;
+      color: #000000;
+      font-size: 18px;
+      line-height: 25px;
+    }
+    
+    .singlePostDescInput:focus {
+      outline: none;
+    }
+    .singlePostButton {
+      width: 100px;
+      border: none;
+      background-color: $darkPurple;
+      padding: 5px;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+      align-self: flex-end;
+      margin-top: 20px;
+    }
+    
 
     //SINGLE
+    
     .single {
       display: flex;
       gap: 50px;
@@ -606,7 +709,162 @@ button:hover {
         }
       }
     }
+
+    //SIDEBAR
+    .sidebar {
+      flex: 3;
+      margin: 20px;
+      padding-bottom: 30px;
+      background-color: $sand;
+      border-radius: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-size: 16px;
+    }
+    
+    .sidebarItem {
+     
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    
+    .sidebarTitle {
+      margin: 10px;
+      padding: 5px;
+      width: 80%;
+      border-top: 2px solid white;
+      border-bottom: 2px solid white;
+      //font-family: "Varela Round", sans-serif;
+      font-size: 16px;
+      color: #222;
+      font-weight: 600;
+      line-height: 30px;
+      text-align: center;
+    }
+    
+    .sidebarItem > img {
+      margin-top: 15px;
+      width: 70%;
+      height: 70%;
+    }
+    
+    .sidebarItem > p {
+      padding: 30px;
+    }
+    
+    .sidebarList {
+      list-style: none;
+      margin-bottom: 30px;
+    }
+    
+    .sidebarListItem {
+      display: inline-block;
+      width: 50%;
+      margin-top: 15px;
+      cursor: pointer;
+    }
+    
+    .sidebarSocial {
+      margin-top: 15px;
+      width: 250px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    
+    .sidebarIcon{
+        font-size: 16px;
+        margin-left: 10px;
+        cursor: pointer;
+    }
+
+
     //WRITE
+
+    .writeImg {
+      margin-left: 150px;
+      width: 500px;
+      height: 250px;
+      border-radius: 10px;
+      object-fit: cover;
+    }
+
+    .writeForm {
+      position: relative;
+    }
+
+    .writeFormGroup {
+      margin-left: 150px;
+      display: flex;
+      align-items: center;
+    }
+
+
+    .writeLabel {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+    }
+    
+    .writeIcon {
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      border: 1px solid;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 20px;
+      color: $darkPurple;
+    }
+  
+
+    .writeLabel:hover .writeLabelText {
+      display: inline-block;
+
+    }
+    
+    .writeLabelText {
+      display: none;
+      margin-left: 5px;
+      font-size: 14px;
+      color: $darkPurple;
+    }
+
+    .writeInput {
+      margin-top: 10px;
+      margin-left: 10px;
+      font-size: 30px;
+      border: 1px solid #000;
+      padding: 20px;
+      width: 70vw;
+      
+    }
+
+    .writeInput:focus {
+      outline: none;
+    }
+
+    .writeText {
+      font-size: 20px;
+      height: 100vh;
+    }
+
+    .writeSubmit {
+      position: absolute;
+      top: 30px;
+      right: 50px;
+      color: white;
+      background-color: $darkPurple;
+      padding: 10px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
     .add {
       margin-top: 20px;
       display: flex;
@@ -629,65 +887,9 @@ button:hover {
             border: none;
           }
         }
-        .writeImg {
-          margin-left: 150px;
-          width: 70vw;
-          height: 250px;
-          border-radius: 10px;
-          object-fit: cover;
-        }
+        
 
-        .writeForm {
-          position: relative;
-        }
 
-        .writeFormGroup {
-          margin-left: 150px;
-          display: flex;
-          align-items: center;
-        }
-
-        .writeIcon {
-          width: 25px;
-          height: 25px;
-          border-radius: 50%;
-          border: 1px solid;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          font-size: 20px;
-          color: rgb(121, 118, 118);
-          cursor: pointer;
-        }
-
-        .writeInput {
-          font-size: 30px;
-          border: none;
-          padding: 20px;
-          width: 70vw;
-        }
-
-        .writeInput:focus {
-          outline: none;
-        }
-
-        .writeText {
-          font-size: 20px;
-          height: 100vh;
-        }
-
-        .writeSubmit {
-          position: absolute;
-          top: 20px;
-          right: 50px;
-          color: white;
-          background-color: $darkPurple;
-          padding: 10px;
-          border: none;
-          border-radius: 10px;
-          cursor: pointer;
-          font-size: 16px;
-        }
       }
       .menu {
         flex: 2;
